Added win message

--- a/index.html
+++ b/index.html
@@ -8,19 +8,22 @@
     <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="main_container">
-        <div id="gameboard">
-            <div id="oneone" class="box"></div>
-            <div id="onetwo" class="box"></div>
-            <div id="onethree" class="box"></div>
-            <div id="twoone" class="box"></div>
-            <div id="twotwo" class="box"></div>
-            <div id="twothree" class="box"></div>
-            <div id="threeone" class="box"></div>
-            <div id="threetwo" class="box"></div>
-            <div id="threethree" class="box"></div> 
-        </div>
+  <button>
+    New game
+  </button>
+  <div id="main_container">
+    <div id="gameboard">
+      <div id="oneone" class="box"></div>
+      <div id="onetwo" class="box"></div>
+      <div id="onethree" class="box"></div>
+      <div id="twoone" class="box"></div>
+      <div id="twotwo" class="box"></div>
+      <div id="twothree" class="box"></div>
+      <div id="threeone" class="box"></div>
+      <div id="threetwo" class="box"></div>
+      <div id="threethree" class="box"></div>
     </div>
+  </div>
     <script src="practica.js"></script>
 </body>
 </html>
