Worked on a different organization of code, it looks more clean and works perfectly

--- a/index.html
+++ b/index.html
@@ -8,9 +8,18 @@
     <link type="text/css" rel="stylesheet" href="style.css">
 </head>
 <body>
-  <button>
-    New game
-  </button>
+  <form>
+    <label>
+      Set name for player O
+      <input name="playerOsetter">
+    </label>
+
+    <label>
+      Set name for player X
+      <input name="playerXsetter">
+    </label>
+    <input type="submit" value="Start game!">
+  </form>
   <div id="main_container">
     <div id="gameboard">
       <div id="oneone" class="box"></div>
